--- a/frontend/src/scss/_bubbles.scss
+++ b/frontend/src/scss/_bubbles.scss
@@ -38,6 +38,11 @@
   height: 37px;
 }
 
+.modal {
+  height: 50% !important;
+  width: 70%;
+}
+
 .bubbleButton {
   height: 3em;
   line-height: 12px;
